--- a/HomeApp.Core/HomeApp.Core.csproj
+++ b/HomeApp.Core/HomeApp.Core.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="RazorTemplates\Emails\ConfirmRu.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="RazorTemplates\Emails\ConfirmRu.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Bogus" Version="22.0.1" />
     <PackageReference Include="MailKit" Version="2.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
