--- a/HomeApp.Core/HomeApp.Core.csproj
+++ b/HomeApp.Core/HomeApp.Core.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="22.0.1" />
     <PackageReference Include="MailKit" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="RazorLight" Version="2.0.0-beta1" />
